--- a/src/app/chameleon-reports/geriatrics-drugs-on-vacation-component/geriatrics-drugs-on-vacation-component.component.html
+++ b/src/app/chameleon-reports/geriatrics-drugs-on-vacation-component/geriatrics-drugs-on-vacation-component.component.html
@@ -41,10 +41,10 @@
       </div>
     </div>
     <div dir="rtl" style="display: flex; justify-content: space-between; align-items: center">
-      <mat-form-field class="long-search-bar">
-        <mat-label class="filters" style="color: blue">חיפוש</mat-label>
-        <input matInput [formControlName]="'globalFilter'" class="search-input" />
-      </mat-form-field>
+        <mat-form-field class="long-search-bar" style="flex: 1; padding-right: 10px">
+            <mat-label class="filters" style="color: blue"> חיפוש</mat-label>
+            <input matInput [formControlName]="'globalFilter'" class="search-input" />
+          </mat-form-field>
       <div class="icon" matTooltip="Download Excel">
         <img
           src="../../assets/excel.png"
@@ -57,7 +57,8 @@
     </div>
   </form>
 
-  <mat-table [dataSource]="matTableDataSource" matSort dir="rtl" class="mat-elevation-z8">
+  <mat-table  [dataSource]="matTableDataSource" matSort dir="rtl" class="mat-elevation-z8">
+    <!-- Loop through columns to define each column in the table -->
     <ng-container *ngFor="let column of columns" [matColumnDef]="column">
       <mat-header-cell *matHeaderCellDef mat-sort-header>
         {{ getColumnLabel(column) }}
@@ -65,8 +66,10 @@
       <mat-cell *matCellDef="let element">{{ element[column] }}</mat-cell>
     </ng-container>
 
+    <!-- Define the header row -->
     <mat-header-row *matHeaderRowDef="columns"></mat-header-row>
-    <mat-row *matRowDef="let row; columns: columns"></mat-row>
+    <!-- Define the data row -->
+    <mat-row *matRowDef="let row; columns: columns" class="mat-row"></mat-row>
   </mat-table>
 
   <mat-paginator
