--- a/src/app/chameleon-reports/geriatrics-drugs-on-vacation-component/drug-details-dialog/drug-details-dialog.component.html
+++ b/src/app/chameleon-reports/geriatrics-drugs-on-vacation-component/drug-details-dialog/drug-details-dialog.component.html
@@ -30,10 +30,16 @@
     </ng-container>
 
     <!-- Timing Column -->
-    <ng-container matColumnDef="TimingString">
+    <ng-container matColumnDef="FrequencyText">
       <th mat-header-cell *matHeaderCellDef> תזמון </th>
-      <td mat-cell *matCellDef="let row">{{ row.TimingString }}</td>
+      <td mat-cell *matCellDef="let row">{{ row.FrequencyText }}</td>
     </ng-container>
+      <!--  -->
+      <ng-container matColumnDef="SpecificTime">
+        <th mat-header-cell *matHeaderCellDef> תזמון </th>
+        <td mat-cell *matCellDef="let row">{{ row.SpecificTime }}</td>
+      </ng-container>
+  
 
     <!-- Header and Rows -->
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
