--- a/src/app/chameleon-reports/drug2h-review/drug2h-review.component.html
+++ b/src/app/chameleon-reports/drug2h-review/drug2h-review.component.html
@@ -6,29 +6,24 @@
         <mat-card class="filter-card">
           <mat-card-content>
             <form [formGroup]="filterForm">
-              <div class="filter-row">
-                <!-- Year Filter -->
                 <mat-form-field appearance="outline" class="filter-field">
                   <mat-label>שנה</mat-label>
                   <mat-select formControlName="year">
                     <mat-option *ngFor="let year of availableYears" [value]="year">{{ year }}</mat-option>
                   </mat-select>
                 </mat-form-field>
-      
-                <!-- Quarter Filter -->
+              
                 <mat-form-field appearance="outline" class="filter-field">
                   <mat-label>רבעון</mat-label>
                   <mat-select formControlName="quarter">
                     <mat-option *ngFor="let quarter of availableQuarters" [value]="quarter">רבעון {{ quarter }}</mat-option>
                   </mat-select>
                 </mat-form-field>
-      
-                <!-- Apply Filters Button -->
+              
                 <button mat-raised-button color="primary" (click)="applyFilters()">
-                  החל סינון
-                </button>
-              </div>
-            </form>
+                    החל סינון
+                  </button>              </form>
+              
           </mat-card-content>
         </mat-card>
       </div>
