--- a/src/app/chameleon-reports/drug2h-review/drug2h-review.component.html
+++ b/src/app/chameleon-reports/drug2h-review/drug2h-review.component.html
@@ -32,7 +32,9 @@
     <div class="dashboard-container">
       <!-- Best Performers Card -->
       <mat-card class="dashboard-card">
-        <h3>5 Best Performers</h3>
+        <div class="card-title">
+            <h3>top 5</h3>
+          </div>        
         <mat-table [dataSource]="bestPerformers" matSort class="mat-elevation-z8">
           <ng-container matColumnDef="Unit_Name">
             <mat-header-cell *matHeaderCellDef mat-sort-header> יחידה </mat-header-cell>
@@ -49,7 +51,9 @@
   
       <!-- Worst Performers Card -->
       <mat-card class="dashboard-card">
-        <h3>5 Worst Performers</h3>
+        <div class="card-title">
+            <h3>Worst 5</h3>
+          </div>  
         <mat-table [dataSource]="worstPerformers" matSort class="mat-elevation-z8">
           <ng-container matColumnDef="Unit_Name">
             <mat-header-cell *matHeaderCellDef mat-sort-header> יחידה </mat-header-cell>
@@ -66,6 +70,9 @@
   
       <!-- Gauge Card -->
       <mat-card class="dashboard-card">
+        <div class="card-title">
+            <h3>אחוז ביצוע</h3>
+          </div> 
         <ngx-gauge
           [size]="200"
           [value]="gaugeValue"
@@ -107,6 +114,9 @@
 <!-- Global Search and Table Card -->
 <mat-card class="data-card-container">
     <mat-card-content>
+        <div class="card-title">
+            <h3>טבלת נתונים</h3>
+          </div> 
       <!-- Global Search -->
       <form [formGroup]="filterForm" class="filter-form" dir="rtl">
         <mat-form-field class="long-search-bar" appearance="outline" style="flex-grow: 1; margin-right: 10px; width: 70%;">
